# q2rust

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  compile_commands_game.json  compile_commands_quake2.json  compile_commands_ref_gl.json  quake2.sln  quake2.vcxproj  quake2.vcxproj.filters
baseq2/: config.cfg
client/: Cargo.toml  cl_cin.rs  cl_ents.rs  cl_fx.rs  cl_input.rs  cl_inv.rs  cl_main.rs  cl_newfx.rs  cl_parse.rs  cl_pred.rs  cl_scrn.rs  cl_tent.rs  cl_view.rs  console.rs  keys.rs  menu.rs  qmenu.rs  snd_dma.rs  snd_mem.rs  snd_mix.rs
client/src/: main.rs
ctf/: CMakeLists.txt  ctf.vcxproj  ctf.vcxproj.filters  g_ai.rs  g_chase.rs  g_cmds.rs  g_combat.rs  g_ctf.rs  g_func.rs  g_items.rs  g_main.rs  g_misc.rs  g_monster.rs  g_phys.rs  g_save.rs  g_spawn.rs  g_svcmds.rs  g_target.rs  g_trigger.rs  g_utils.rs  g_weapon.rs  m_move.rs  p_client.rs  p_hud.rs  p_menu.rs  p_trail.rs  p_view.rs  p_weapon.rs
game/: CMakeLists.txt  Cargo.toml  g_ai.rs  g_chase.rs  g_cmds.rs  g_combat.rs  g_func.rs  g_items.rs  g_main.rs  g_misc.rs  g_monster.rs  g_phys.rs  g_save.rs  g_spawn.rs  g_svcmds.rs  g_target.rs  g_trigger.rs  g_turret.rs  g_utils.rs  g_weapon.rs  game.vcxproj  game.vcxproj.filters  lib.rs  m_actor.rs  m_berserk.rs  m_boss2.rs  m_boss3.rs  m_boss31.rs  m_boss32.rs  m_brain.rs  m_chick.rs  m_flash.rs  m_flipper.rs  m_float.rs  m_flyer.rs  m_gladiator.rs  m_gunner.rs  m_hover.rs  m_infantry.rs  m_insane.rs  (+13 more)
qcommon/: cmodel.rs  files.rs
qcommon/src/: cmd.rs  common.rs  crc.rs  cvar.rs  md4.rs  net_chan.rs  pmove.rs
ref_gl/: CMakeLists.txt  gl_draw.rs  gl_image.rs  gl_light.rs  gl_mesh.rs  gl_model.rs  gl_rmain.rs  gl_rmisc.rs  gl_rsurf.rs  gl_warp.rs  ref_gl.vcxproj  ref_gl.vcxproj.filters
ref_soft/: CMakeLists.txt  r_aclip.rs  r_alias.rs  r_bsp.rs  r_draw.rs  r_edge.rs  r_image.rs  r_light.rs  r_main.rs  r_misc.rs  r_model.rs  r_part.rs  r_poly.rs  r_polyse.rs  r_rast.rs  r_scan.rs  r_sprite.rs  r_surf.rs  ref_soft.vcxproj  ref_soft.vcxproj.filters
server/: sv_ccmds.rs  sv_ents.rs  sv_game.rs  sv_init.rs  sv_main.rs  sv_send.rs  sv_user.rs  sv_world.rs
win32/: Cargo.toml  cd_win.rs  conproc.rs  glw_imp.rs  in_win.rs  main.rs  net_wins.rs  q_shwin.rs  qgl_win.rs  rw_dib.rs  rw_imp.rs  snd_win.rs  sys_win.c  sys_win.rs  vid_dll.rs  vid_menu.rs
